[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.130.0",
    "docling>=2.37.0",
    "fastapi>=0.115.13",
    "linkup-sdk>=0.2.6",
    "markdown>=3.8.1",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.2",
    "streamlit>=1.46.0",
    "uvicorn>=0.34.3",
]
